apps/monitoring/components/alertmanager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-main
  namespace: monitoring
  labels:
    alertmanager: main
spec:
  type: ClusterIP
  selector:
    alertmanager: alertmanager-main
    app.kubernetes.io/name: alertmanager
  ports:
    - name: web
      port: 9093
      targetPort: web
    - name: reloader
      port: 8080
      targetPort: reloader-web
