apps/monitoring/components/alertmanager/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  to:
    kind: Service
    name: alertmanager-main
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
